problem showing graph in graph viewer

--- a/Proj_2020/CMakeLists.txt
+++ b/Proj_2020/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Proj_2020)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Proj_2020 main.cpp Person.h Person.cpp Car.cpp Car.h Graph.cpp Graph.h MutablePriorityQueue.h BuildGraph.cpp BuildGraph.h)
+add_executable(Proj_2020 main.cpp Person.h Person.cpp Car.cpp Car.h Graph.cpp Graph.h MutablePriorityQueue.h BuildGraph.cpp BuildGraph.h UserInterface.cpp UserInterface.h)
